fix: restore gap between menu items

--- a/src/styles/layout/header.sass
+++ b/src/styles/layout/header.sass
@@ -42,6 +42,7 @@ $link__color: $header__color !important
 .menu // ul	
 	margin: 0
 	padding: 0
+	gap: 8px
 	list-style: none
 
 	// Adaptive
